<resources>
    <string name="app_name">The TTTE Community Companion</string>
    <string name="action_settings">Settings</string>
    <string name="app_logo">the ttte community logo</string>
    <string name="quiz_title">The TTTE Community Quiz Game</string>
    <string name="description_of_quiz">Featuring questions made by James Mason,
        Wong Village, Jordangaming101, cgiben, Epiclafiteau, SpongeEngine423, and
        the admins about The TTTE Community Channel.</string>
    <string name="dev_des">Application developed by Michael Abercrombie, Shawn Idahosa, and
    Ivan Quach</string>
    <string name="next_pls">Next</string>
    <string name="contact_us">Need Help? Contact Us</string>
    <string name="email">Email us at
        thetttecommunity@gmail.com</string>
    <string name="playnow">Play Now</string>
    <string name="dev_team">Dev Team</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="james_mason">What was the one thing the Community did in order to keep
        the TAB project consistent? by James Mason</string>
    <string name="wong_village">Who was the former admin of the ttte community? by Wong Village
    </string>
    <string name="jordongaming101">What was the first mini-remake uploaded
        to Youtube? by jordangaming101</string>
    <string name="homepage_str">HomePage</string>
    <string name="cgiben">Which two episodes were chosen for
        the second community project? by cgiben</string>
    <string name="prompt_con">Questions, Considerations, Comments, Business Inquiries, or Ideas to add to the app.</string>
    <string name="epicla">What was the first remake submitted to the channel? by Epiclafiteau
    </string>
    <string name="basic_title">Basics to Know for a Community Remake</string>
    <string name="remakeaclip">Remaking a Clip</string>
    <string name="yt_remakeaclip">How to Remake a clip V2 Video Click Here!</string>
    <string name="audition_rules">FULL LIST OF RULES/GUIDELINES:</string>
    <string name="aud1">1. No auditions over 40 seconds long!</string>
    <string name="facebook2">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="blog">Blogger</string>
    <string name="googleplusname">Google Plus</string>
    <string name="Wikiapage">Wikia</string>
    <string name="Tumbler">Tumblr</string>
    <string name="dailymotion">DailyMotion</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Tutorials</item>
        <item>The TTTE Quiz</item>
        <item>Admins Social Media</item>
        <item>About Us</item>
        <item>Contact Us</item>
    </string-array>


    <!-- This is an ad unit ID for a test ad. Replace with your own banner ad unit id. -->
    <string name="banner_ad_unit_id">ca-app-pub-1124479823240796/6969992490</string>

    <string name="aud2">2. Please try to stick to the sample line given.</string>
    <string name="aud3">3. Do not mix audio from an actual episode and your audio 
        together and pass it in as an audition.</string>
    <string name="aud4">4. Send all auditions as an UNLISTED video 
        (no private or public videos will be accepted).</string>
    <string name="aud5">5. Send the video through the YouTube\'s messaging system
        (Look at the video on how to above).</string>
    <string name="aud6">6. Don\'t email us your audition (We may not see)</string>
    <string name="aud7">7. You can only audition for one character!</string>
    <string name="aud8">8. Have the rating system enabled!</string>
    <string name="aud9">9. Follow the video\'s format for sending in an audition.</string>
    <string name="audition_title">Audition to Voice a Character</string>
    <string name="how_to_aud">How to Audition to Voice a Character V2 Video Click Here!</string>
    <string name="vote_character">How to Vote for Voice Actors V2 Video Click Here</string>
    <string name="voting_rules">Voting Rules</string>
    <string name="vote1">Yes you can vote for yourself.</string>
    <string name="vote2">Do not promote your video. (Automatic Disqualification)</string>
    <string name="vote3">Do not share the link (of your video) to others
        (Automatic Disqualification)</string>
    <string name="vote4">You can share the link of the audition’s playlist.</string>
    <string name="vote5">No like bots</string>
    <string name="vote6">We do not count dislikes for votes period.</string>
    <string name="vote7">Using multiple accounts to like your video is
        an automatic disqualification.</string>
    <string name="rules_clips1">1. Clips may be remade in any format, using items such as model locomotives
        (eg. Trackmaster, Bachmann, Hornby etc.) and tools such as Trainz and Paint. Note that clips must NOT
        contain any actual Thomas and Friends footage, and must be made specially for this project.
</string>
    <string name="rules_clip2">2. All remade clips should keep to the original video as best as
        possible, including sets, locomotives present, camera angles and timing.</string>
    <string name="rules_clip3">3. All remade clips should be the same length as the original clips
        and should have an extra two seconds of footage on each
        end of the clip, for cutting purposes.</string>
    <string name="rules_clip4">4. All remade clips must be in 16:9 aspect ratio
        (the video itself must be a rectangle, not a square).</string>
    <string name="rules_clip5">5. Audio and titles of any kind are not required.
        These will be done later by the editing crew.</string>
    <string name="rules_clip6">6. Please ensure that all remade clips are both
        well-lit and that the camera is steady.</string>
    <string name="rules_clip7">7. Your hands should NOT be seen. Please use fishing line instead.
        Also insure that no other people or animals are in the background.</string>
    <string name="rules_clip8">8. Though HD video is not required, please ensure that you film,
        edit and upload your remade clips in the highest possible quality.</string>
    <string name="spongeengine423">What was the first community
        remake to not have Thomas as one of the characters?    by SpongeEngine423</string>
    <string name="credit">Credits</string>
    <string name="continue_to_credits">Continue</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="title_activity_contact_us">Contact_us</string>
    <string name="Follow_Us_on_Twitter">Twitter</string>
    <string name="DieselD199">DieselD199</string>
    <string name="socialmedia">Admins\' Social Media</string>
    <string name="aboutus">About Us</string>
    <string name="founder">Founder</string>
    <string name="director">Director</string>
    <string name="editor">Main Editor</string>
    <string name="visualvideoeditor">Visual Video Editor</string>
    <string name="fac">Final Authority of Clips</string>
    <string name="dieselD_des">For those who don\'t know, since 2007 DieselD199 has been
        providing a range of videos to entertain the online community. He has, for the most part,
        focused on making parody videos of the popular children\'s
        television show, Thomas and Friends.</string>
    <string name="ee93_name">Enterprisingengine93</string>
    <string name="co_director">Co-Director</string>
    <string name="dieselD199_underline"><u>DieselD199</u></string>
    <string name="script_writer">Script-Writer</string>
    <string name="audio_director">Audio Director</string>
    <string name="ee93_des">All of my work is based off of the Railway Series by the
        Reverend W. Awdry and Christopher Awdry, as well as the show adapted by Britt Allcroft
        and David Mitton! The stories, however, are of my own invention unless otherwise noted,
        with a lot of new and fun characters throughout</string>
    <string name="pe619">Percyengine619</string>
    <string name="website">Website Creator/Manager</string>
    <string name="twittermanager">Twitter Creator/Manager</string>
    <string name="Privat_Invite_Only_Manager">Private Invite-Only Manager</string>
    <string name="Audition_Manager_Video_Clip_Manager">Audition Manager/Video Clip Manager</string>
    <string name="facebookmanager">Facebook Manager</string>
    <string name="Head_Clip_Judge">Head Clip Judge</string>
    <string name="tutorials">Tutorials</string>
    <string name="contact">Contact</string>
    <string name="adminquiz">The TTTE Quiz</string>
    <string name="facebook">Facebook</string>
    <string name="waitlist">Waitlist</string>
    <string name="wikia">The Official Wikia</string>
    <string name="pastprojects">Previous Projects</string>
    <string name="pe619_description">Remaking your favorite episodes with a different style.
        My style is towards a realistic set with most of the work going towards
        filming rather than editing. Just like the real Thomas The Tank Engine and Friends
        show seem to do in Season 1-7.</string>
    <string name="sidekickjason">Sidekickjason</string>
    <string name="Facebook_creator">Facebook Creator/Manager</string>
    <string name="as_clip">Associate Clip Judge</string>
    <string name="skj_description">Bringing the Island of Sodor to life like never before! Currently
        we are broadcasting on new original Thomas and Friends
        series made with Tomy TrackMaster engines.</string>
    <string name="title_activity_social_meda_page">SocialMedaPage</string>
    <string name="title_activity_loadingscreenofquiz">loadingscreenofquiz</string>
    <string name="title_activity_quiz_credits">QuizCredits</string>
    <string name="title_activity_tutorials_page">tutorials_page</string>
    <string name="title_activity_tutorials">tutorials</string>
    <string name="title_activity_the_controls">the_controls</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer_list_item">drawer_list_item</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_current_remake_page">CurrentRemakePage</string>
    <string name="title_activity_audition">Audition</string>
</resources>
