<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thetttecommunity.thetttecommunitycompan.QuizCredits"
    tools:showIn="@layout/activity_quiz_credits"
    android:background="#e0dede">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/credit"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#1702fb"
            android:textSize="35sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/james_mason"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#f70505" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/wong_village"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#04b916" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/jordongaming101"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#05bb1a" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/epicla"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#03c43a" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cgiben"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0b03fb" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/spongeengine423"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fec642" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/dev_team"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#024e15"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="#060606"
            android:text="@string/dev_des"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#36c702"
            android:textSize="21sp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="26sp"
            android:id="@+id/buttontohome"
            android:text="@string/homepage_str"
            android:background="#fe0101"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
