<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thetttecommunity.thetttecommunitycompan.loadingscreenofquiz"
    tools:showIn="@layout/activity_loadingscreenofquiz"
    android:background="@drawable/tracks1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/quiz_title"
        android:id="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:textColor="#0244fb"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="35sp"
        android:background="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/description_of_quiz"
        android:id="@+id/textView4"
        android:gravity="center_horizontal"
        android:textColor="#030303"
        android:background="#ffffff"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button

        android:layout_width="250dp"
        android:layout_height="120dp"
        android:id="@+id/button_to_playnow"
        android:contentDescription="@string/quiz_title"
        android:text="@string/playnow"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="40sp"
        android:background="#0341fc"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="69dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
